syntax = "proto3";

package com.bap.grpc;

option go_package = "bff-go-mvp/proto/discover/gen;discover";

// Discover request matching the beckn protocol structure
message DiscoverRequest {
  Context context = 1;
  Message message = 2;
}

// Context message for discover request
// Contains BAP (Buyer App) information only, as BPP is not known at request time
message Context {
  string version = 1;
  string action = 2;
  string domain = 3;
  string bap_id = 4;
  string bap_uri = 5;
  string transaction_id = 6;
  string message_id = 7;
  string timestamp = 8;
  string ttl = 9;
}

// Message containing discover parameters
message Message {
  Geometry geometry = 1;
  double distance_meters = 2;
  string evse_id = 3;
  TimeWindow time_window = 4;
  Filters filters = 5;
  Sort sort = 6;
}

// Geometry for spatial queries
message Geometry {
  string type = 1;
  repeated double coordinates = 2;
}

// TimeWindow for time-based filtering
message TimeWindow {
  string start = 1;
  string end = 2;
}

// Filters for search filtering
message Filters {
  string cpo = 1;
  string connector_type = 2;
  double max_power_kw = 3;
  repeated string amenities = 4;
  Vehicle vehicle = 5;
}

// Vehicle information for filtering
message Vehicle {
  string make = 1;
  string model = 2;
  string type = 3;
}

// Sort options for search results
message Sort {
  string sort_by = 1;
  string order = 2;
}
