syntax = "proto3";

package discover;

option go_package = "bff-go-mvp/proto/discover/gen;discover";

// OnDiscover response matching the beckn protocol structure
message OnDiscoverResponse {
  OnDiscoverContext context = 1;
  OnDiscoverMessageResponse message = 2;
}

// Context message for on_discover response
// Contains both BAP (Buyer App) and BPP (Buyer Provider Platform) information
message OnDiscoverContext {
  string version = 1;
  string action = 2;
  string domain = 3;
  string bap_id = 4;
  string bap_uri = 5;
  string bpp_id = 6;
  string bpp_uri = 7;
  string transaction_id = 8;
  string message_id = 9;
  string timestamp = 10;
  string ttl = 11;
}

// Message containing on_discover response data
message OnDiscoverMessageResponse {
  repeated Catalog catalogs = 1;
}

// Catalog message
message Catalog {
  string id = 1;
  Descriptor descriptor = 2;
  Validity validity = 3;
  repeated Item items = 4;
  repeated Offer offers = 5;
}

// Descriptor message
message Descriptor {
  string name = 1;
  string short_desc = 2;
  string long_desc = 3;
}

// Item message
message Item {
  string id = 1;
  Descriptor descriptor = 2;
  Category category = 3;
  repeated AvailableAt available_at = 4;
  repeated AvailabilityWindow availability_window = 5;
  bool rateable = 6;
  Rating rating = 7;
  bool is_active = 8;
  repeated string network_id = 9;
  Provider provider = 10;
  ItemAttributes item_attributes = 11;
}

// Category message
message Category {
  string code_value = 1;
  string name = 2;
}

// AvailableAt (LocationItem) message
message AvailableAt {
  Geo geo = 1;
  Address address = 2;
}

// Address message
message Address {
  string street_address = 1;
  string address_locality = 2;
  string address_region = 3;
  string postal_code = 4;
  string address_country = 5;
}

// Geo message
message Geo {
  string type = 1;
  repeated double coordinates = 2;
}

// AvailabilityWindow message
message AvailabilityWindow {
  string start_time = 1;
  string end_time = 2;
}

// Rating message
message Rating {
  double value = 1;
  int32 count = 2;
}

// Provider message
message Provider {
  string id = 1;
  Descriptor descriptor = 2;
}

// ItemAttributes (ChargingService) message
message ItemAttributes {
  string connector_type = 1;
  double max_power_kw = 2;
  double min_power_kw = 3;
  int32 socket_count = 4;
  bool reservation_supported = 5;
  AvailableAt service_location = 6;
  repeated string amenity_feature = 7;
  string ocpp_id = 8;
  string evse_id = 9;
  string roaming_network = 10;
  string parking_type = 11;
  string connector_id = 12;
  string power_type = 13;
  string connector_format = 14;
  string charging_speed = 15;
  string station_status = 16;
}

// Offer message
message Offer {
  string id = 1;
  Descriptor descriptor = 2;
  repeated string items = 3;
  Price price = 4;
  Validity validity = 5;
  repeated string accepted_payment_method = 6;
  OfferAttributes offer_attributes = 7;
  string provider = 8;
}

// Price message
message Price {
  string currency = 1;
  double value = 2;
  ApplicableQuantity applicable_quantity = 3;
}

// ApplicableQuantity message
message ApplicableQuantity {
  string unit_text = 1;
  string unit_code = 2;
  int32 unit_quantity = 3;
}

// Validity message
message Validity {
  string start_date = 1;
  string end_date = 2;
}

// OfferAttributes (ChargingOffer) message
message OfferAttributes {
  BuyerFinderFee buyer_finder_fee = 1;
  string idle_fee_policy = 2;
}

// BuyerFinderFee message
message BuyerFinderFee {
  string fee_type = 1;
  double fee_value = 2;
}
